<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tangibledesign.pintu.LearnActivity" >
 

	<com.tangibledesign.pintu.DrawingView
	    android:id="@+id/drawing"
	    android:layout_width="0dp"
	    android:layout_height="fill_parent"
	    android:layout_marginBottom="3dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="3dp"
	    android:layout_weight="1"
	    android:background="#FFFFFFFF" />
	
	<LinearLayout
	    android:id="@+id/game_options_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="vertical" >
	 
	 
	    <ImageView
	    android:id="@+id/learnRadical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginBottom="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="5dp"
	    android:contentDescription="@string/radicals"
	    android:src="@drawable/tree" />
	    
	    <TextView 
	    android:id="@+id/learnPinyin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:text="@string/pinyin" />
		
	    
	    <LinearLayout
	    android:id="@+id/btn_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
   
		   <Button
		   android:id="@+id/draw_btn"
		   android:layout_width="35dp"
		   android:layout_height="35dp"
		   style="?android:attr/buttonStyleSmall"
		   android:color="#000000"
		   android:text="@string/icon_draw"
		   android:onClick="startDraw" />
		
		   <Button
		   android:id="@+id/erase_btn"
		   android:layout_width="35dp"
		   android:layout_height="35dp"
		   style="?android:attr/buttonStyleSmall"
		   android:color="#000000"
		   android:text="@string/icon_erase"
		   android:onClick="startEraser" />
		   
		   <Button
		   android:id="@+id/new_btn"
		   android:layout_width="35dp"
		   android:layout_height="35dp"
		   style="?android:attr/buttonStyleSmall"
		   android:color="#000000"
		   android:text="@string/icon_new"
		   android:onClick="clearScreen" />
		    
		   <Button
		   android:id="@+id/next_btn"
		   android:layout_width="35dp"
		   android:layout_height="35dp"
		   style="?android:attr/buttonStyleSmall"
		   android:color="#000000"
		   android:text="@string/icon_next"
		   android:onClick="nextRadical" />
	    </LinearLayout>
	    
	    <RelativeLayout 
	    android:id="@+id/phraseExample"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center">
		    
	        <ImageView
			    android:id="@+id/ex1Img"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
	    		android:layout_marginRight="5dp"
			    android:contentDescription="@string/radicals"
			    android:src="@drawable/body" />
	        	    
	        <TextView
	            android:id="@+id/ex1Def"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/ex1Img"
	          	android:layout_alignTop="@+id/ex1Img"
	            android:layout_alignBottom="@+id/ex1Img"
	            android:gravity="center"
	            android:text="@string/example1" />
	        
	        <ImageView
			    android:id="@+id/ex2Img"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
	    		android:layout_marginRight="5dp"
			    android:layout_below="@+id/ex1Img"
			    android:contentDescription="@string/radicals"
			    android:src="@drawable/rest" />

	        			
			<TextView
	            android:id="@+id/ex2Def"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@+id/ex2Img"
	            android:layout_below="@+id/ex1Def"
	            android:layout_alignTop="@+id/ex2Img"
	            android:layout_alignBottom="@+id/ex2Img"
	            android:gravity="center"
	            android:text="@string/example2" />
	    </RelativeLayout>
	    
	</LinearLayout>

</LinearLayout>
