<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tangibledesign.pintu.LevelActivity$PlaceholderFragment" >


    <Button
        android:id="@+id/lvl_learn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:background="@drawable/green"
        android:onClick="startGame"
        android:padding="10dp"
        android:text="@string/first"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/lvl_easy"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:layout_below="@+id/lvl_learn"
        android:background="@drawable/blue"
        android:padding="10dp"
        android:text="@string/second"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/lvl_med"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:layout_below="@+id/lvl_easy"
        android:background="@drawable/red"
        android:padding="10dp"
        android:text="@string/third"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/lvl_hard"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_margin="4dp"
        android:layout_below="@+id/lvl_med"
        android:background="@drawable/yellow"
        android:padding="10dp"
        android:text="@string/fourth"
        android:textColor="#ffffff" />

</RelativeLayout>