<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_topmargin"
    tools:context="com.tangibledesign.pintu.EasyActivity" >
	
    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/instructions"
            android:textColor="#e67950"
            android:textSize="16sp"
            android:typeface="serif" />
        
        <LinearLayout
		    android:id="@+id/radical_layout1"
		    android:layout_width="40dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_centerVertical="true"
		    android:layout_below="@+id/instructions"
		    android:orientation="vertical" >
		    
		    <ImageView 
		    android:id="@+id/radical1"
		    style="@style/RadicalImages"
		    android:contentDescription="@string/radicals"
		    android:src="@drawable/tree" />
		
		 	<ImageView
		    android:id="@+id/radical2"
		    style="@style/RadicalImages"
		    android:contentDescription="@string/radicals"
		    android:src="@drawable/person" />
		 
		    <ImageView
		    android:id="@+id/radical3"
		    style="@style/RadicalImages"
		    android:contentDescription="@string/radicals"
		    android:src="@drawable/one" />
		    
		</LinearLayout>
		
		
		<com.tangibledesign.pintu.DrawingView
		    android:id="@+id/drawing"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_below="@+id/instructions"
		    android:layout_toRightOf="@+id/radical_layout1"
		    android:layout_marginBottom="3dp"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:layout_marginTop="3dp"
		    android:background="#FFFFFFFF" />
	
	</RelativeLayout>

	<LinearLayout
	    android:id="@+id/game_options_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="vertical" >
	 
	    <RelativeLayout
	        android:id="@+id/timerLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center">
	        
	        <TextView 
		    android:id="@+id/timerTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/timerTitle" />
	        
		    <TextView 
		    android:id="@+id/timer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/timerTitle" />
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:id="@+id/scoreLayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:layout_marginBottom="2dp"
	        android:layout_gravity="center">
	        
	        <TextView 
		    android:id="@+id/scoreTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/scoreTitle" />
	        
		    <TextView 
		    android:id="@+id/score"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/scoreTitle" />
	    </RelativeLayout>
	    
	    <LinearLayout
	    android:id="@+id/btn_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
	    
	       	<Button
		    android:id="@+id/draw_btn"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    style="?android:attr/buttonStyleSmall"
		    android:color="#000000"
		    android:text="@string/icon_draw"
		    android:onClick="startDraw" />
	
		    <Button
		    android:id="@+id/erase_btn"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    style="?android:attr/buttonStyleSmall"
		    android:color="#000000"
		    android:text="@string/icon_erase"
		    android:onClick="startEraser" />
		    
		    <Button
		    android:id="@+id/new_btn"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    style="?android:attr/buttonStyleSmall"
		    android:color="#000000"
		    android:text="@string/icon_new"
		    android:onClick="clearScreen" />
	
		    <Button
		    android:id="@+id/submit_btn"
		    android:layout_width="35dp"
		    android:layout_height="35dp"
		    style="?android:attr/buttonStyleSmall"
		    android:color="#000000"
		    android:text="@string/icon_save"
		    android:onClick="submitEntry" />
	    </LinearLayout>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:layout_marginBottom="2dp"
	        android:layout_gravity="center"
	        android:text="@string/resultsTitle">
	        
	    </TextView>
	    
	    <LinearLayout
	    android:id="@+id/resultsLayout"
	    android:layout_width="150dp" 
	    android:layout_height="120dp"
	    android:background="@drawable/customborder"
	    android:orientation="horizontal"
	    android:gravity="center">
		    
	        <TextView
	        android:id="@+id/results"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center">
	    	</TextView>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>

